added more chat rooms

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
 	--dark-color-a: #800080;
-	--dark-color-b: #b5651d;
+	--dark-color-b: #c169aa;
 	--light-color: #e6e9ff;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
